# transactron

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy_gh_pages.yml  main.yml  publish-to-pypi.yml
docs/: api.md  conf.py  development-environment.md  getting-started.md  index.md  transactions.md
docs/_code/: ledcontrol1.py  ledcontrol2.py  ledcontrol3.py  ledcontrol4.py  rpnstack.py
scripts/: build_docs.sh
test/: conftest.py  test_assign.py  test_branches.py  test_connectors.py  test_methods.py  test_simultaneous.py
test/core/: test_transactions.py
test/lib/: test_allocators.py  test_basicio.py  test_connectors.py  test_fifo.py  test_metrics.py  test_reqres.py  test_simultaneous.py  test_stack.py  test_storage.py  test_transaction_lib.py  test_transformers.py
test/testing/: test_log.py  test_method_mock.py  test_validate_arguments.py
test/utils/: test_component_interface.py  test_onehotswitch.py  test_shifter.py  test_utils.py
test/utils/amaranth_ext/: test_coding.py  test_elaboratables.py  test_min_value.py
transactron/: graph.py  profiler.py  tracing.py
transactron/cmd/: tprof.py
transactron/core/: __init__.py  body.py  context.py  manager.py  method.py  schedulers.py  sugar.py  tmodule.py  transaction.py  transaction_base.py
transactron/lib/: __init__.py  adapters.py  allocators.py  basicio.py  buffers.py  connectors.py  fifo.py  logging.py  metrics.py  reqres.py  simultaneous.py  stack.py  storage.py  transformers.py
transactron/testing/: __init__.py  infrastructure.py  method_mock.py  profiler.py  test_circuit.py  testbenchio.py
transactron/utils/: __init__.py  _typing.py  assign.py  data_repr.py  debug_signals.py  depcache.py  dependencies.py  gen.py  transactron_helpers.py
transactron/utils/amaranth_ext/: __init__.py  coding.py  component_interface.py  elaboratables.py  functions.py  memory.py  shifter.py
