[project]
name = "transactron"
version = "2024.11.20.dev0"
dependencies = [
    "amaranth == 0.5.3",
    "amaranth-stubs @ git+https://github.com/kuznia-rdzeni/amaranth-stubs.git@edb302b001433edf4c8568190adc9bd0c0039f45",
    "dataclasses-json == 0.6.3",
    "tabulate == 0.9.0"
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
]

[project.optional-dependencies]
dev = [
    # Linting
    "pyright == 1.1.332",
    "flake8 == 7.0.0",
    "black == 24.4.2",
    # Testing
    "pytest == 8.0.0",
    "pytest-xdist == 3.5.0",
    "hypothesis == 6.99.6",
    "parameterized == 0.8.1",
    # Documentation
    "pep8-naming == 0.13.3",
    "Sphinx == 5.1.1",
    "sphinx-rtd-theme == 1.0.0",
    "myst-parser == 0.18.0",
    "numpydoc == 1.5.0",
    "sphinxcontrib-mermaid == 0.8.1",
    # Other
    "pre-commit == 2.16.0"
]

[tool.pyright]
include = ["transactron", "test", "scripts"]
reportMissingImports = true
reportMissingTypeStubs = false
reportWildcardImportFromLibrary = false

[tool.pytest.ini_options]
minversion = "7.2.2"
testpaths = "tests"
norecursedirs = ['*.egg', '.*', 'build', 'dist', 'venv', '__traces__', '__pycache__']
filterwarnings = [
    "ignore:cannot collect test class 'TestbenchContext':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestbenchIO':pytest.PytestCollectionWarning",
    "ignore:No files were found in testpaths:pytest.PytestConfigWarning:"
]
