[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "transactron"
dynamic = ["version"]
dependencies = [
    "amaranth == 0.5.3",
    "amaranth-stubs @ git+https://github.com/kuznia-rdzeni/amaranth-stubs.git@a93c5da4b939065b3c60534a8bd143865f3929c4",
    "dataclasses-json == 0.6.3",
    "tabulate == 0.9.0"
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
]

[project.optional-dependencies]
dev = [
    # Linting
    "pyright == 1.1.332",
    "flake8 == 7.0.0",
    "black == 24.4.2",
    # Testing
    "pytest == 8.0.0",
    "pytest-xdist == 3.5.0",
    "hypothesis == 6.99.6",
    # Documentation
    "pep8-naming == 0.13.3",
    "Sphinx == 5.1.1",
    "sphinx-rtd-theme == 1.0.0",
    "myst-parser == 0.18.0",
    "numpydoc == 1.5.0",
    "sphinxcontrib-mermaid == 0.8.1",
    # Other
    "pre-commit == 2.16.0"
]

[tool.setuptools_scm]

[tool.pyright]
include = ["transactron", "test", "scripts"]
reportMissingImports = true
reportMissingTypeStubs = false
reportWildcardImportFromLibrary = false

[tool.pytest.ini_options]
minversion = "7.2.2"
testpaths = "tests"
norecursedirs = ['*.egg', '.*', 'build', 'dist', 'venv', '__traces__', '__pycache__']
filterwarnings = [
    "ignore:cannot collect test class 'TestbenchContext':pytest.PytestCollectionWarning",
    "ignore:cannot collect test class 'TestbenchIO':pytest.PytestCollectionWarning",
    "ignore:No files were found in testpaths:pytest.PytestConfigWarning:"
]
